# Cortical-Peaks-Challenge-2026

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROTOCOL.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: internal-wire-protocol.md  release-process.md
examples/: bci_client.py
games/dino/: assets.py  config.py  constants.py  game_objects.py  hud.py  state.py  update.py  viewer.py
games/pong/: assets.py  config.py  state.py  update.py  viewer.py
games/wheelchair/: __main__.py  game.py
launcher/: __init__.py  __main__.py
scripts/: fat_wheel.py
shared/: asset_manager.py  audit.py  constants.py  leaderboard.py  log.py  player_manager.py  spectator_connect.py  state.py  ui.py
shared/connection/: connection_page.py  protocol.py  server.py  spectator_client.py
tests/: conftest.py  test_audit.py  test_dino_hud.py  test_dino_logic.py  test_leaderboard.py  test_pong_config.py  test_pong_logic.py  test_protocol.py  test_server.py  test_spectator_client.py  test_state.py  test_viewers.py
